@@ -1,3 +1,8 @@
+2008-01-26  Andreia Gaita <avidigal@novell.com>
+
+	* Widget.cpp: Add proxy defines in case we're building against a local 
+	xulrunner in build/ (see ChangeLog in build/)
+
 2008-01-24  Andreia Gaita <avidigal@novell.com>
 
 	* BrowserWindow.cpp (OnStateChange): send progress events up
